<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/cash"
            style="@style/Widget.ZakatCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:text="@string/cash"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cash_in_hand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/cash_in_hand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cash">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cash_in_hand_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cash_for_hajj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/cash_for_hajj"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cash_in_hand">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cash_for_hajj_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cash_given_loans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/cash_given_loans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cash_for_hajj">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cash_given_loans_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cash_for_investment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/cash_for_investment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cash_given_loans">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cash_for_investment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/liabilities"
            style="@style/Widget.ZakatCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:text="@string/liabilities"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cash_for_investment" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/liabilities_borrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/liabilities_borrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liabilities">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/liabilities_borrow_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/liabilities_wages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/liabilities_wages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liabilities_borrow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/liabilities_wages_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/liabilities_taxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/liabilities_taxes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liabilities_wages">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/liabilities_taxes_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/gold_and_silver"
            style="@style/Widget.ZakatCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:text="@string/gold_and_silver"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liabilities_taxes" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/gold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gold_and_silver">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gold_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/silver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/silver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/silver_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/trade_goods"
            style="@style/Widget.ZakatCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:text="@string/trade_goods"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/silver" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stock_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/stock_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trade_goods">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stock_value_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/net_worth"
            style="@style/Widget.ZakatCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:text="@string/net_worth"
            android:textColor="@color/green"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate" />

        <TextView
            android:id="@+id/net_worth_value"
            style="@style/Widget.ZakatCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_worth_value"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/net_worth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/net_worth" />

        <TextView
            android:id="@+id/payable_zakat"
            style="@style/Widget.ZakatCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:text="@string/payable_zakat"
            android:textColor="@color/green"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate" />

        <TextView
            android:id="@+id/payable_zakat_value"
            style="@style/Widget.ZakatCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payable_zakat_value"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/payable_zakat"
            app:layout_constraintTop_toBottomOf="@+id/payable_zakat" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="calculateZakat"
            android:text="@string/calculate_zakat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>